--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arvo&display=swap");
 
 * {
   margin: 0%;
@@ -113,11 +112,7 @@ html {
 }
 
 .heading-title::before {
-  background-image: linear-gradient(
-    to right,
-    rgba(64, 37, 113, 1),
-    rgba(51, 32, 102, 1)
-  );
+  background-image: linear-gradient(to right, rgba(64, 37, 113, 1), rgba(51, 32, 102, 1));
   animation: animateTyping var(--typeSpeed) steps(var(--textLength)) forwards;
 }
 
@@ -211,8 +206,8 @@ nav {
   border-radius: 3px;
   z-index: 1;
   transform-origin: 5px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    opacity 0.55s ease;
   background: white;
 }
 
@@ -327,180 +322,150 @@ nav {
   margin: 0% 5%;
 }
 
-#team-slider
-{
+#team-slider {
   padding: 10% 5%;
   margin-top: 3%;
 }
 
-.team-members
-{
-    width: 45vh;
-    height: 45vh;
-    margin: 3%;
-    border-radius: 50%;
+.team-members {
+  width: 45vh;
+  height: 45vh;
+  margin: 3%;
+  border-radius: 50%;
 }
 
-.team-name
-{
-  font-family: 'Moon Dance', cursive;
+.team-name {
+  font-family: "Moon Dance", cursive;
   font-size: 3em;
   font-weight: bolder;
 }
 
-  .footer .footer-bottom {
-    background: rgb(59,35,108);
-    color: #686868;
-    height: 150px;
-    width: 95%;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    padding-top: 20px;
-   
-  }
-  .container
-  {
-      display: flex;
-      justify-content:center;
-      align-items: center;
-      height: 100%;
-      margin-top: 15px;
-      
-  }
-  .btn
-  {
-      width: 50px;
-      height: 50px;
-      background-color: #fafafa;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 5px;
-      margin-right: 10px;
-      cursor: pointer;
-      transition: all 0.3s;
-      border-radius: 10px;
-  }
-  i.fa
-  {
-      font-size: 30px;
-  }
-  #fb
-  {
-      color: #006fff;
-      text-shadow: 0 0 20px #006fff;
-  }
-  #ig
-  {
-      color: #ff5f40;
-      text-shadow: 0 0 20px #ff5f40;
-  }
-  #ln
-  {
-      color: #00acff;
-      text-shadow: 0 0 20px #00acff;
-  }
-  #yt
-  {
-      color: #ff0000;
-      text-shadow: 0 0 30px #ff0000;
-  }
-  #gt
-  {
-      color: #860c0c;
-      text-shadow: 0 0 15px #860c0c;
-  }
-  #ph
-  {
-      color: #16cc34;
-      text-shadow: 0 0 15px #16cc34;
-  }
-  .btn.ph-btn
-  {
-   
-      box-shadow: 0 15px 15px -11px rgba(7, 192, 47, 0.53);
-  }
-  .btn.ph-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow: 0 20px 35px -9px rgba(14, 235, 14, 0.65);
-  }
-  .btn.fb-btn
-  {
-      box-shadow: 0 15px 15px -11px rgba(0,111,255,0.53);
-  }
-  .btn.fb-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow: 0 20px 35px -9px rgba(0,111,255,0.65);
-  }
-  .btn.ig-btn
-  {
-      box-shadow: 0 15px 15px -11px rgba(255,16,39,0.5);
-  }
-  .btn.ig-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow: 0 20px 35px -9px  rgba(255,16,39,0.57);
-  }
-  .btn.gt-btn
-  {
-      box-shadow: 0 15px 15px -11px #be1818;
-  }
-  .btn.gt-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow:0 20px 35px -9px #860c0c;
-  }
-  
-  .btn.yt-btn
-  {
-      box-shadow: 0 15px 15px -11px rgba(255, 47, 47, 0.53);
-  }
-  .btn.yt-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow:0 20px 35px -9px rgba(236, 5, 5, 0.6);
-  }
-  
-  .btn.ln-btn
-  {
-      box-shadow: 0 15px 15px -11px rgba(0,255,255,0.53);
-  }
-  .btn.ln-btn:hover
-  {
-      transform: scale(1.2);
-      box-shadow:0 20px 35px -9px rgba(0,111,255,0.6);
-  }
-  h1
-  {
-      color: #f5f5f5;
-  }
-  
+.footer .footer-bottom {
+  background: rgb(59, 35, 108);
+  color: #686868;
+  height: 150px;
+  width: 95%;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  padding-top: 20px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-top: 15px;
+}
+.btn {
+  width: 50px;
+  height: 50px;
+  background-color: #fafafa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: all 0.3s;
+  border-radius: 10px;
+}
+i.fa {
+  font-size: 30px;
+}
+#fb {
+  color: #006fff;
+  text-shadow: 0 0 20px #006fff;
+}
+#ig {
+  color: #ff5f40;
+  text-shadow: 0 0 20px #ff5f40;
+}
+#ln {
+  color: #00acff;
+  text-shadow: 0 0 20px #00acff;
+}
+#yt {
+  color: #ff0000;
+  text-shadow: 0 0 30px #ff0000;
+}
+#gt {
+  color: #860c0c;
+  text-shadow: 0 0 15px #860c0c;
+}
+#ph {
+  color: #16cc34;
+  text-shadow: 0 0 15px #16cc34;
+}
+.btn.ph-btn {
+  box-shadow: 0 15px 15px -11px rgba(7, 192, 47, 0.53);
+}
+.btn.ph-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px rgba(14, 235, 14, 0.65);
+}
+.btn.fb-btn {
+  box-shadow: 0 15px 15px -11px rgba(0, 111, 255, 0.53);
+}
+.btn.fb-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px rgba(0, 111, 255, 0.65);
+}
+.btn.ig-btn {
+  box-shadow: 0 15px 15px -11px rgba(255, 16, 39, 0.5);
+}
+.btn.ig-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px rgba(255, 16, 39, 0.57);
+}
+.btn.gt-btn {
+  box-shadow: 0 15px 15px -11px #be1818;
+}
+.btn.gt-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px #860c0c;
+}
+
+.btn.yt-btn {
+  box-shadow: 0 15px 15px -11px rgba(255, 47, 47, 0.53);
+}
+.btn.yt-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px rgba(236, 5, 5, 0.6);
+}
+
+.btn.ln-btn {
+  box-shadow: 0 15px 15px -11px rgba(0, 255, 255, 0.53);
+}
+.btn.ln-btn:hover {
+  transform: scale(1.2);
+  box-shadow: 0 20px 35px -9px rgba(0, 111, 255, 0.6);
+}
+h1 {
+  color: #f5f5f5;
+}
+
 @keyframes flicker {
-    50% {
-      color: white;
-      filter: saturate(200%) hue-rotate(20deg);
-    }
+  50% {
+    color: white;
+    filter: saturate(200%) hue-rotate(20deg);
   }
+}
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
-
-
 .footer {
-    line-height:1;
+  line-height: 1;
   position: relative;
   width: 100%;
-  background: rgb(59,35,108);
+  background: rgb(59, 35, 108);
   min-height: 100px;
   padding: -5px 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height:470px;
+  height: 470px;
   font-family: Georgia, serif !important;
   font-size: 20px;
 }
@@ -609,232 +574,225 @@ nav {
   }
 }
 .footer .footer-content {
-    height: 370px;
-    display: flex;
-    margin-bottom: 10px;
-  }
+  height: 370px;
+  display: flex;
+  margin-bottom: 10px;
+}
 .footer .footer-content .footer-section {
   flex: 1;
   margin-bottom: 10px;
-  
 }
 .footer .footer-content .about {
-    width: 550px;
-    margin-right:100px;
-    height: 300px;
+  width: 550px;
+  margin-right: 100px;
+  height: 300px;
 }
 
 .footer .footer-content .links {
-    width: 350px;
-    margin-right:100px;
+  width: 350px;
+  margin-right: 100px;
 }
 .footer .footer-content h1,
 .footer .footer-content h2 {
   color: white;
 }
 
-
 .footer .footer-content .links ul a {
-    color: white;
-    display: block;
-    margin-bottom: 10px;
-    font-size: 1.2em;
-    transition: all .3s;
+  color: white;
+  display: block;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+  transition: all 0.3s;
+}
+.footer .footer-content h3 {
+  color: white;
+  font-family: Georgia, serif;
+  line-height: 1.5;
+  margin-top: 0px;
+}
+
+.footer .footer-content .links ul a:hover {
+  color: rgb(244, 136, 248);
+  margin-left: 15px;
+  transition: all 0.3s;
+}
+
+@import "compass/css3";
+.glitch {
+  color: white;
+  font-size: 40px;
+  position: relative;
+
+  /* width: 400px; */
+}
+@keyframes noise-anim {
+  0% {
+    clip: rect(1px, 9999px, 1px, 0);
   }
-  .footer .footer-content h3{
-      color: white;
-      font-family: Georgia, serif;
-      line-height: 1.5;
-      margin-top: 0px;
-
-      
+  5% {
+    clip: rect(5px, 9999px, 9px, 0);
   }
-  
-  .footer .footer-content .links ul a:hover {
-    color: rgb(244, 136, 248);
-    margin-left: 15px;
-    transition: all .3s;
+  10% {
+    clip: rect(15px, 9999px, 23px, 0);
   }
+  15% {
+    clip: rect(22px, 9999px, 8px, 0);
+  }
+  20% {
+    clip: rect(25px, 9999px, 19px, 0);
+  }
+  25% {
+    clip: rect(11px, 9999px, 25px, 0);
+  }
+  30% {
+    clip: rect(17px, 9999px, 4px, 0);
+  }
+  35% {
+    clip: rect(19px, 9999px, 8px, 0);
+  }
+  40% {
+    clip: rect(26px, 9999px, 26px, 0);
+  }
+  45% {
+    clip: rect(30px, 9999px, 29px, 0);
+  }
+  50% {
+    clip: rect(25px, 9999px, 28px, 0);
+  }
+  55% {
+    clip: rect(13px, 9999px, 1px, 0);
+  }
+  60% {
+    clip: rect(3px, 9999px, 7px, 0);
+  }
+  65% {
+    clip: rect(14px, 9999px, 20px, 0);
+  }
+  70% {
+    clip: rect(8px, 9999px, 29px, 0);
+  }
+  75% {
+    clip: rect(21px, 9999px, 8px, 0);
+  }
+  80% {
+    clip: rect(22px, 9999px, 10px, 0);
+  }
+  85% {
+    clip: rect(6px, 9999px, 8px, 0);
+  }
+  90% {
+    clip: rect(17px, 9999px, 15px, 0);
+  }
+  95% {
+    clip: rect(8px, 9999px, 21px, 0);
+  }
+  100% {
+    clip: rect(13px, 9999px, 27px, 0);
+  }
+}
+.glitch:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  background: #3b236c;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+@keyframes noise-anim-2 {
+  0% {
+    clip: rect(23px, 9999px, 27px, 0);
+  }
+  5% {
+    clip: rect(14px, 9999px, 21px, 0);
+  }
+  10% {
+    clip: rect(9px, 9999px, 19px, 0);
+  }
+  15% {
+    clip: rect(24px, 9999px, 1px, 0);
+  }
+  20% {
+    clip: rect(4px, 9999px, 25px, 0);
+  }
+  25% {
+    clip: rect(11px, 9999px, 4px, 0);
+  }
+  30% {
+    clip: rect(13px, 9999px, 6px, 0);
+  }
+  35% {
+    clip: rect(15px, 9999px, 9px, 0);
+  }
+  40% {
+    clip: rect(24px, 9999px, 20px, 0);
+  }
+  45% {
+    clip: rect(10px, 9999px, 15px, 0);
+  }
+  50% {
+    clip: rect(3px, 9999px, 1px, 0);
+  }
+  55% {
+    clip: rect(1px, 9999px, 22px, 0);
+  }
+  60% {
+    clip: rect(29px, 9999px, 20px, 0);
+  }
+  65% {
+    clip: rect(3px, 9999px, 3px, 0);
+  }
+  70% {
+    clip: rect(23px, 9999px, 4px, 0);
+  }
+  75% {
+    clip: rect(28px, 9999px, 26px, 0);
+  }
+  80% {
+    clip: rect(28px, 9999px, 21px, 0);
+  }
+  85% {
+    clip: rect(7px, 9999px, 1px, 0);
+  }
+  90% {
+    clip: rect(4px, 9999px, 9px, 0);
+  }
+  95% {
+    clip: rect(11px, 9999px, 16px, 0);
+  }
+  100% {
+    clip: rect(3px, 9999px, 18px, 0);
+  }
+}
+.glitch:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  background: #3b236c;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+.foot-follow {
+  position: relative;
+  margin: auto;
+  width: 350px;
+}
 
-
-  @import "compass/css3";
- .glitch {
-	 color: white;
-	 font-size: 40px;
-	 position: relative;
-   
-	 /* width: 400px; */
-}
- @keyframes noise-anim {
-	 0% {
-		 clip: rect(1px, 9999px, 1px, 0);
-	}
-	 5% {
-		 clip: rect(5px, 9999px, 9px, 0);
-	}
-	 10% {
-		 clip: rect(15px, 9999px, 23px, 0);
-	}
-	 15% {
-		 clip: rect(22px, 9999px, 8px, 0);
-	}
-	 20% {
-		 clip: rect(25px, 9999px, 19px, 0);
-	}
-	 25% {
-		 clip: rect(11px, 9999px, 25px, 0);
-	}
-	 30% {
-		 clip: rect(17px, 9999px, 4px, 0);
-	}
-	 35% {
-		 clip: rect(19px, 9999px, 8px, 0);
-	}
-	 40% {
-		 clip: rect(26px, 9999px, 26px, 0);
-	}
-	 45% {
-		 clip: rect(30px, 9999px, 29px, 0);
-	}
-	 50% {
-		 clip: rect(25px, 9999px, 28px, 0);
-	}
-	 55% {
-		 clip: rect(13px, 9999px, 1px, 0);
-	}
-	 60% {
-		 clip: rect(3px, 9999px, 7px, 0);
-	}
-	 65% {
-		 clip: rect(14px, 9999px, 20px, 0);
-	}
-	 70% {
-		 clip: rect(8px, 9999px, 29px, 0);
-	}
-	 75% {
-		 clip: rect(21px, 9999px, 8px, 0);
-	}
-	 80% {
-		 clip: rect(22px, 9999px, 10px, 0);
-	}
-	 85% {
-		 clip: rect(6px, 9999px, 8px, 0);
-	}
-	 90% {
-		 clip: rect(17px, 9999px, 15px, 0);
-	}
-	 95% {
-		 clip: rect(8px, 9999px, 21px, 0);
-	}
-	 100% {
-		 clip: rect(13px, 9999px, 27px, 0);
-	}
-}
- .glitch:after {
-	 content: attr(data-text);
-	 position: absolute;
-	 left: 2px;
-	 text-shadow: -1px 0 red;
-	 top: 0;
-	 color: white;
-	 background: #3b236c;
-	 overflow: hidden;
-	 clip: rect(0, 900px, 0, 0);
-	 animation: noise-anim 2s infinite linear alternate-reverse;
-}
- @keyframes noise-anim-2 {
-	 0% {
-		 clip: rect(23px, 9999px, 27px, 0);
-	}
-	 5% {
-		 clip: rect(14px, 9999px, 21px, 0);
-	}
-	 10% {
-		 clip: rect(9px, 9999px, 19px, 0);
-	}
-	 15% {
-		 clip: rect(24px, 9999px, 1px, 0);
-	}
-	 20% {
-		 clip: rect(4px, 9999px, 25px, 0);
-	}
-	 25% {
-		 clip: rect(11px, 9999px, 4px, 0);
-	}
-	 30% {
-		 clip: rect(13px, 9999px, 6px, 0);
-	}
-	 35% {
-		 clip: rect(15px, 9999px, 9px, 0);
-	}
-	 40% {
-		 clip: rect(24px, 9999px, 20px, 0);
-	}
-	 45% {
-		 clip: rect(10px, 9999px, 15px, 0);
-	}
-	 50% {
-		 clip: rect(3px, 9999px, 1px, 0);
-	}
-	 55% {
-		 clip: rect(1px, 9999px, 22px, 0);
-	}
-	 60% {
-		 clip: rect(29px, 9999px, 20px, 0);
-	}
-	 65% {
-		 clip: rect(3px, 9999px, 3px, 0);
-	}
-	 70% {
-		 clip: rect(23px, 9999px, 4px, 0);
-	}
-	 75% {
-		 clip: rect(28px, 9999px, 26px, 0);
-	}
-	 80% {
-		 clip: rect(28px, 9999px, 21px, 0);
-	}
-	 85% {
-		 clip: rect(7px, 9999px, 1px, 0);
-	}
-	 90% {
-		 clip: rect(4px, 9999px, 9px, 0);
-	}
-	 95% {
-		 clip: rect(11px, 9999px, 16px, 0);
-	}
-	 100% {
-		 clip: rect(3px, 9999px, 18px, 0);
-	}
-}
- .glitch:before {
-	 content: attr(data-text);
-	 position: absolute;
-	 left: -2px;
-	 text-shadow: 1px 0 blue;
-	 top: 0;
-	 color: white;
-	 background: #3b236c;
-	 overflow: hidden;
-	 clip: rect(0, 900px, 0, 0);
-	 animation: noise-anim-2 3s infinite linear alternate-reverse;
-}
- .foot-follow
- {
-   position:relative;
-   margin: auto;
-   width:350px;
- }
-
-.footer-list
-{
+.footer-list {
   padding-left: 30px;
-  text-align:justify;
+  text-align: justify;
   list-style-type: disc;
 }
-.uk-card-body p{
+.uk-card-body p {
   font-size: 1.2em;
-  font-family: 'Arvo', serif;
+  font-family: "Arvo", serif;
 }
 
 @media only screen and (max-width: 700px) {
@@ -899,7 +857,6 @@ nav {
     padding: 5%;
     background-color: whitesmoke;
   }
-
 }
 
 /* Timeline */
@@ -964,21 +921,22 @@ nav {
   --radius: calc(var(--size) * 20 / 100);
 }
 
-body {
-  margin: 0;
-  background: #e9e9f4;
-}
+
 main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+ 
   width: 100%;
   margin: auto;
   margin-top: 50px;
+  overflow: visible;
 }
-
+.teamh {
+  
+  height:2100px!important;
+}
 .image-card {
   width: var(--size);
   height: var(--size);
@@ -987,7 +945,7 @@ main {
   background-size: cover;
   margin: calc(var(--size) * 20 / 100);
 }
-.image-card:before {
+/* .image-card:before {
   content: "";
   position: absolute;
   width: 90%;
@@ -997,7 +955,7 @@ main {
   border-radius: var(--radius);
   z-index: -1;
   filter: blur(12px);
-  opacity: 0.6;
+  opacity: 0.1;
   left: 50%;
   transform: translate(-50%, 10%);
-}
+} */
