--- a/css/style.css
+++ b/css/style.css
@@ -1015,3 +1015,43 @@ main {
   left: 50%;
   transform: translate(-50%, 10%);
 }
+.image-card:hover .content {
+  transform: perspective(50px) translateZ(2px);
+}
+.caption
+{
+  
+  background-color: rgb(41, 39, 39,0.5);
+  top: 79%;
+  width: 100%;
+  height: 21%;
+  position: absolute;
+  border-radius: 0px 0px var(--radius) var(--radius); 
+  
+}
+.content {
+  position: relative;
+  z-index: 1;
+  transition: transform 0.3s ease;
+  color: white;
+  background: none;
+  height: 50px;
+  margin-top: 200px;
+  margin-left: 20%;
+  border: none;
+ 
+ 
+ 
+}
+.content h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ display: inline;
+  color: white;
+}
+.content h3 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: inline;
+   color: white;
+   margin-top:0px;
+
+ }
